<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rest.MudarSenha"
    android:orientation="vertical"
    android:background="@drawable/background_login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/closebyhomeapp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_senha"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod_cond"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        />

    <EditText
        android:id="@+id/etCodigo"
        style="@style/input_forms"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/etEmail"
        style="@style/input_forms"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_esqueceu_senha"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        />

    <android.widget.Button
        style="@style/button_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mudar_senha"
        android:layout_marginTop="20dp"
        android:onClick="mudarSenha"
        />

</LinearLayout>