<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ContratarFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >

        <TextView
            android:id="@+id/tv_bem_vindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/procure_um"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="start|center"
            android:fontFamily="@font/opensans_bold"
            />

        <TextView
            android:id="@+id/tv_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_bem_vindo"
            android:layout_centerVertical="true"
            android:text=" Serviço"
            android:textColor="@color/primary_orange"
            android:textSize="20sp"
            android:layout_gravity="start|center"
            android:fontFamily="@font/opensans_bold"
            />

        <ImageView
            android:id="@+id/ivPerfil"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|center"
            android:padding="2dp"
            android:src="@drawable/perfil_not_found"
            android:background="@drawable/img_perfil"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/icon_servico"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecione_um_servico"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_perfil"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtro_por_servico"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFuncionarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:itemCount="5"
            tools:listitem="@layout/res_card_job"
            />

    </LinearLayout>

</LinearLayout>